# mini-drop

./: .gitignore  Dockerfile  LEARN.md  Makefile  PLAN.md  README.md  docker-compose.yml  notes.md
analyzer/: analyzer.py
apiserver/: app.py  mini_drop.db
cpp/: CMakeLists.txt  config.json.example
cpp/agent/: Config.cpp  Config.h  HeartbeatChannel.cpp  HeartbeatChannel.h  HotmethodChannel.cpp  HotmethodChannel.h  main.cpp
cpp/common/: IProfiler.h  PerfProfiler.cpp  PerfProfiler.h  ProcStats.cpp  ProcStats.h  test_common  test_common.cpp
cpp/server/: ControlService.cpp  ControlService.h  HealthCheckService.cpp  HealthCheckService.h  HotmethodService.cpp  HotmethodService.h  TaskQueue.h  main.cpp  test_taskqueue.cpp
cpp/tests/: test_procstats.cpp  test_taskqueue.cpp
docs/: 设计文档.md
proto/: common.proto  control.proto  healthcheck.proto  hotmethod.proto  init.proto
tests/: test_e2e.py
web_ui/templates/: index.html  task_detail.html
